Explicitly use Java 9 language level when compiling.